[ feat ] -- 調整shopline無法使用的語法

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,4 +1,3 @@
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -130,6 +129,7 @@ body {
     border-radius: 20px;
     padding: 4px 16px;
     margin-bottom: 13px;
+    position: relative;
     @media (max-width: 576px) {
       font-size: 16px;
     }
@@ -144,11 +144,12 @@ body {
     .dialog-subtitle-group {
       display: flex;
       align-items: center;
+      position: relative;
       .dialog-subtitle {
         background: $secondary-light;
         border: 1px solid $primary-dark;
         color: white;
-        filter: drop-shadow(4px 4px 0 $primary-dark);
+        box-shadow: 4px 4px 0px $primary-dark;
         font-size: 24px;
         line-height: 150%;
         font-weight: 700;
@@ -160,14 +161,9 @@ body {
           font-size: 16px;
         }
         .text {
-          filter: drop-shadow(2px 2px 0 $primary-dark);
-          &::before {
-            content: attr(data-storke);
-            position: absolute;
-            z-index: -1;
-            -webkit-text-stroke: 4px $primary-dark;
-            text-stroke: 10px $primary-dark;
-          }
+          filter: drop-shadow(2px 2px 0 #452f1d)
+            drop-shadow(-1px -1px 0 #452f1d) drop-shadow(-1px 1px 0 #452f1d)
+            drop-shadow(1px -1px 0 #452f1d);
         }
       }
       &__title {
@@ -176,17 +172,14 @@ body {
         line-height: 120%;
         font-weight: 700;
         letter-spacing: 0.125rem;
-        filter: drop-shadow(4px 4px 0 $primary-dark);
+        // filter: drop-shadow(4px 4px 0 $primary-dark);
+        filter: drop-shadow(4px 4px 0 #452f1d) drop-shadow(-2px -2px 0 #452f1d)
+          drop-shadow(-2px 2px 0 #452f1d) drop-shadow(2px -2px 0 #452f1d);
         @media (max-width: 576px) {
           font-size: 28px;
-          filter: drop-shadow(2px 2px 0 $primary-dark);
-        }
-        &::before {
-          content: attr(data-title);
-          position: absolute;
-          z-index: -1;
-          -webkit-text-stroke: 10px $primary-dark;
-          text-stroke: 10px $primary-dark;
+          filter: drop-shadow(2px 2px 0 #452f1d)
+            drop-shadow(-1px -1px 0 #452f1d) drop-shadow(-1px 1px 0 #452f1d)
+            drop-shadow(1px -1px 0 #452f1d);
         }
         &.orange {
           color: $primary;
@@ -226,7 +219,7 @@ body {
   .primary-button {
     display: flex;
     height: 64px;
-    padding: 0 64px;
+    padding: 0 92px 0 64px;
     border-radius: 16px;
     background-color: $primary;
     font-size: 24px;
@@ -237,13 +230,37 @@ body {
     align-items: center;
     justify-content: center;
     column-gap: 16px;
+    position: relative;
+    text-decoration: none;
+    border: 1px solid transparent;
+    &:hover{
+      background-color: transparent;
+      border: 1px solid $primary;
+      color: $primary;
+    }
     &:after {
       content: ">>";
+      animation: go 0.5s ease-in infinite;
+      position: absolute;
+      right: 34px;
+      top: 50%;
+      transform: translateY(-50%);
+      @keyframes go {
+        0% {
+          right: 24px;
+        }
+        50% {
+          right: 32px;
+        }
+        100% {
+          right: 24px;
+        }
+      }
     }
     @media (max-width: 768px) {
       font-size: 18px;
       height: 48px;
-      padding: 0 32px;
+      padding: 0 60px 0 32px;
     }
   }
   .img-content-block {
@@ -355,21 +372,44 @@ body {
         bottom: 0;
         height: 100%;
         width: auto;
+        display: block;
         @media (max-width: 992px) {
           width: 40%;
           height: auto;
+          display: none;
         }
         @media (max-width: 476px) {
           width: 60%;
         }
+        &.m {
+          display: none;
+          @media (max-width: 992px) {
+            display: block;
+          }
+        }
       }
       .foot-print {
         position: absolute;
-        opacity: 0.2;
+        opacity: 0;
+        animation: bg 5s ease-in infinite;
+        &:nth-child(2) {
+          animation-delay: 2s;
+        }
+        @keyframes bg {
+          0% {
+            opacity: 0.4;
+          }
+          50% {
+            opacity: 0;
+          }
+          100% {
+            opacity: 0;
+          }
+        }
         &.left {
           left: -20px;
           bottom: -20px;
-          rotate: 20deg;
+          transform: rotate(20deg);
           @media (max-width: 992px) {
             width: 95px;
             height: auto;
@@ -377,7 +417,7 @@ body {
           }
         }
         &.top {
-          rotate: -38deg;
+          transform: rotate(-38deg);
           top: -77px;
           left: 450px;
           @media (max-width: 992px) {
@@ -434,10 +474,7 @@ body {
               position: absolute;
               right: -44px;
               bottom: 40%;
-              rotate: 20deg;
-              path {
-                fill: $primary;
-              }
+              transform: rotate(20deg);
             }
           }
           .th {
@@ -452,11 +489,13 @@ body {
             @media (max-width: 768px) {
               margin: 8px;
               padding: 8px 24px;
-              width: 50px;
+              width: 100px;
+              min-width: 100px;
               height: auto;
             }
             @media (max-width: 576px) {
               width: 32px;
+              min-width: 82px;
             }
           }
         }
@@ -505,12 +544,14 @@ body {
       position: relative;
       @media (max-width: 992px) {
         margin-left: auto;
+        width: 40%;
       }
       @media (max-width: 576px) {
         width: 154px;
       }
       &__bg {
         padding-top: 180px;
+        height: auto;
         @media (max-width: 992px) {
           width: 100%;
           height: auto;
@@ -525,12 +566,30 @@ body {
       &__product {
         position: absolute;
         top: 0;
-        right: 50%;
+        right: 24%;
         transform: translateX(50%);
+        animation: shake 0.6s linear infinite;
+        @keyframes shake {
+          0% {
+            transform: rotate(-5deg);
+          }
+          25% {
+            transform: rotate(0deg);
+          }
+          50% {
+            transform: rotate(5deg);
+          }
+          75% {
+            transform: rotate(0deg);
+          }
+          100% {
+            transform: rotate(-5deg);
+          }
+        }
         @media (max-width: 992px) {
-          width: 70%;
+          width: 60%;
           height: auto;
-          top: 60px;
+          top: 10px;
         }
         @media (max-width: 768px) {
           top: 10px;
@@ -546,24 +605,29 @@ body {
           position: absolute;
           width: 74px;
           height: 74px;
+          min-width: 74px;
+          min-height: 74px;
+          animation: footPrint ease-in-out infinite;
+
           @media (max-width: 768px) {
             width: 50px;
             height: 50px;
+            min-width: 50px;
+            min-height: 50px;
           }
           @media (max-width: 576px) {
             width: 30px;
             height: 30px;
+            min-width: 30px;
+            min-height: 30px;
           }
-          path {
-            fill: $primary-dark;
-          }
-
           &:nth-child(1) {
-            opacity: 0.2;
             top: -40px;
             right: 585px;
-            rotate: -48deg;
+            transform: rotate(-48deg);
             scale: 0.6;
+            animation-delay: 3s;
+            animation-duration: 4s;
             @media (max-width: 992px) {
               top: 3px;
               right: 415px;
@@ -577,11 +641,12 @@ body {
             }
           }
           &:nth-child(2) {
-            opacity: 0.5;
             top: 50px;
             right: 580px;
-            rotate: -25deg;
+            transform: rotate(-25deg);
             scale: 1.1;
+            animation-delay: 2s;
+            animation-duration: 4s;
             @media (max-width: 992px) {
               top: 100px;
               right: 415px;
@@ -595,11 +660,12 @@ body {
             }
           }
           &:nth-child(3) {
-            opacity: 0.8;
             top: 50px;
             right: 490px;
             scale: 0.8;
-            rotate: -45deg;
+            transform: rotate(-45deg);
+            animation-delay: 1s;
+            animation-duration: 4s;
             @media (max-width: 992px) {
               top: 110px;
               right: 315px;
@@ -616,7 +682,8 @@ body {
             top: 130px;
             right: 425px;
             opacity: 1;
-            rotate: -27deg;
+            transform: rotate(-27deg);
+            animation-duration: 4s;
             @media (max-width: 992px) {
               top: 200px;
               right: 255px;
@@ -627,6 +694,17 @@ body {
             @media (max-width: 576px) {
               top: 110px;
               right: 145px;
+            }
+          }
+          @keyframes footPrint {
+            0% {
+              opacity: 1;
+            }
+            50% {
+              opacity: 0;
+            }
+            100% {
+              opacity: 0;
             }
           }
         }
@@ -661,7 +739,6 @@ body {
         @media (max-width: 576px) {
           display: grid;
           grid-template-columns: repeat(2, 1fr);
-          row-gap: 8px;
           column-gap: 8px;
           top: -23px;
         }
@@ -681,6 +758,10 @@ body {
           @media (max-width: 992px) {
             &:nth-child(1) {
               margin-left: auto;
+            }
+            &:nth-child(1),
+            &:nth-child(2) {
+              margin-bottom: 8px;
             }
           }
           @media (max-width: 576px) {
@@ -721,28 +802,77 @@ body {
         background-position-y: bottom;
         padding: 20px;
         width: 80%;
+        margin: auto;
         @media (max-width: 576px) {
           padding: 0;
           margin: auto;
         }
-        img {
-          width: 100%;
-          height: auto;
+        .dog-block {
+          width: 294px;
+          height: 254px;
+          margin: auto;
+          @media (max-width: 992px) {
+            width: 320px;
+            height: 320px;
+          }
+          @media (max-width: 768px) {
+            width: 220px;
+            height: 220px;
+          }
+          @media (max-width: 576px) {
+            width: 120px;
+            height: 120px;
+          }
+          img {
+            width: 100%;
+            height: auto;
+            animation: picDog 0.6s ease-in infinite;
+            @keyframes picDog {
+              0% {
+                margin-top: -40px;
+              }
+              50% {
+                margin-top: -30px;
+              }
+              100% {
+                margin-top: -40px;
+              }
+            }
+            @media (max-width: 576px) {
+              animation: picDog 0.6s ease-in infinite;
+              @keyframes picDog {
+                0% {
+                  margin-top: -20px;
+                }
+                50% {
+                  margin-top: -10px;
+                }
+                100% {
+                  margin-top: -20px;
+                }
+              }
+            }
+          }
         }
         &:nth-child(1) {
-          background-image: url(/comic-01.png);
+          background-image: url(https://img.shoplineapp.com/media/image_clips/6831e4a689712300113b99e7/original.png?1748100261);
           @media (max-width: 992px) {
             background-image: none;
           }
         }
         &:nth-child(2) {
-          background-image: url(/comic-02.png);
+          background-image: url(https://img.shoplineapp.com/media/image_clips/6831e4a64f62d3000dc794d6/original.png?1748100261);
           @media (max-width: 992px) {
             background-image: none;
           }
+          .dog-block {
+            img {
+              animation-delay: 1s;
+            }
+          }
         }
         &:nth-child(3) {
-          background-image: url(/comic-03.png);
+          background-image: url(https://img.shoplineapp.com/media/image_clips/6831e4a5b62328000f87a6c7/original.png?1748100261);
           @media (max-width: 992px) {
             background-image: none;
           }
@@ -782,21 +912,15 @@ body {
           font-weight: 700;
           letter-spacing: 0.025rem;
           text-align: center;
-          filter: drop-shadow(4px 4px 0 $primary-dark);
+          // filter: drop-shadow(4px 4px 0 $primary-dark);
+          filter: drop-shadow(4px 4px 0 #452f1d)
+            drop-shadow(-2px -2px 0 #452f1d) drop-shadow(-2px 2px 0 #452f1d)
+            drop-shadow(2px -2px 0 #452f1d);
           @media (max-width: 576px) {
-            filter: drop-shadow(2px 2px 0 $primary-dark);
+            filter: drop-shadow(2px 2px 0 #452f1d)
+              drop-shadow(-1px -1px 0 #452f1d) drop-shadow(-1px 1px 0 #452f1d)
+              drop-shadow(1px -1px 0 #452f1d);
             font-size: 16px;
-          }
-          &::before {
-            content: attr(data-stroke);
-            position: absolute;
-            z-index: -1;
-            -webkit-text-stroke: 6px $primary-dark;
-            text-stroke: 6px $primary-dark;
-            @media (max-width: 576px) {
-              -webkit-text-stroke: 4px $primary-dark;
-              text-stroke: 4px $primary-dark;
-            }
           }
         }
       }
@@ -831,7 +955,12 @@ body {
         display: flex;
         align-items: center;
         position: relative;
-        img {
+        .img-block {
+          width: 300px;
+          height: 300px;
+          img {
+            height: auto;
+          }
           @media (max-width: 992px) {
             position: absolute;
           }
@@ -843,19 +972,23 @@ body {
           @media (max-width: 992px) {
             margin-top: 24px;
           }
-          img {
+          .img-block {
             @media (max-width: 992px) {
               width: 35%;
               height: auto;
               right: 0;
               top: -80px;
+              img {
+                width: 100%;
+                height: auto;
+              }
             }
             @media (max-width: 768px) {
               top: -70px;
             }
             @media (max-width: 576px) {
               right: 0;
-              top: -60px;
+              top: -40px;
             }
           }
         }
@@ -867,7 +1000,8 @@ body {
           @media (max-width: 992px) {
             margin-top: 16px;
           }
-          img {
+          .img-block {
+            animation-delay: 1.5s;
             @media (max-width: 992px) {
               width: 35%;
               height: auto;
@@ -876,9 +1010,13 @@ body {
               z-index: 1;
               width: 25%;
               height: auto;
+              img {
+                width: 100%;
+                height: auto;
+              }
             }
             @media (max-width: 576px) {
-              top: 60px;
+              top: 10px;
             }
           }
           .dialog-block__content__text {
@@ -893,12 +1031,17 @@ body {
           @media (max-width: 992px) {
             margin-top: 16px;
           }
-          img {
+          .img-block {
+            animation-delay: 1s;
             @media (max-width: 992px) {
               right: 0;
-              top: 0;
+              top: -80px;
               width: 30%;
               height: auto;
+              img {
+                width: 100%;
+                height: auto;
+              }
             }
             @media (max-width: 576px) {
               right: 0;
@@ -968,6 +1111,7 @@ body {
         @media (max-width: 992px) {
           width: 20%;
           height: auto;
+          border-radius: 8px;
         }
       }
     }
@@ -1008,6 +1152,9 @@ body {
         display: inline-flex;
         align-items: center;
         margin-bottom: 13px;
+        @media (max-width: 576px) {
+          margin-bottom: 8px;
+        }
         .title {
           color: $primary;
           border: 1px solid $primary;
@@ -1025,6 +1172,7 @@ body {
       }
     }
     img {
+      position: relative;
       @media (max-width: 992px) {
         position: absolute;
         top: 110px;
