--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -195,7 +195,8 @@ body {
     line-height: 120%;
     color: $g-900;
     font-weight: 700;
-    letter-spacing: 0.12m5rem;
+    letter-spacing: 0.125rem;
+    text-align: center;
     @media (max-width: 576px) {
       font-size: 28px;
     }
@@ -233,7 +234,7 @@ body {
     position: relative;
     text-decoration: none;
     border: 1px solid transparent;
-    &:hover{
+    &:hover {
       background-color: transparent;
       border: 1px solid $primary;
       color: $primary;
@@ -759,14 +760,57 @@ body {
             &:nth-child(1) {
               margin-left: auto;
             }
+          }
+          @media (max-width: 576px) {
+            font-size: 16px;
             &:nth-child(1),
             &:nth-child(2) {
               margin-bottom: 8px;
             }
           }
-          @media (max-width: 576px) {
-            font-size: 16px;
-          }
+        }
+      }
+    }
+    .note {
+      font-size: 16px;
+      color: $primary;
+      margin-top: 24px;
+      text-align: center;
+      @media (max-width: 768px) {
+        text-align: start;
+      }
+    }
+    &__listPic {
+      display: flex;
+      column-gap: 32px;
+      margin-top: 38px;
+      align-items: center;
+      @media (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+      }
+      &__img {
+        width: 60%;
+        height: auto;
+        border-radius: 40px;
+        @media (max-width: 768px) {
+          border-radius: 24px;
+        }
+      }
+      .banner_list {
+        list-style-type: none;
+        padding: 0;
+        font-size: 20px;
+        line-height: 160%;
+        color: $primary-dark;
+        font-weight: 700;
+        letter-spacing: 0.025rem;
+        text-align: justify;
+        @media (max-width: 768px) {
+          font-size: 16px;
+        }
+        li {
+          margin-bottom: 16px;
         }
       }
     }
