--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -235,6 +235,7 @@ body {
     text-decoration: none;
     border: 1px solid transparent;
     &:hover {
+      cursor: pointer;
       background-color: transparent;
       border: 1px solid $primary;
       color: $primary;
