--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1174,9 +1174,16 @@ body {
   }
   .info-block {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    @media (max-width: 992px) {
-      flex-direction: column;
+    flex-direction: column;
+    // @media (max-width: 992px) {
+    //   position: relative;
+    // }
+    &__des {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       position: relative;
     }
     &__left {
@@ -1200,7 +1207,7 @@ body {
       flex-direction: column;
       margin-bottom: 12px;
       padding: 0;
-      margin-top: 88px;
+      margin-top: 8px;
       @media (max-width: 768px) {
         font-size: 16px;
       }
@@ -1229,9 +1236,11 @@ body {
     }
     img {
       position: relative;
+      height: 380px;
+      width: auto;
       @media (max-width: 992px) {
         position: absolute;
-        top: 110px;
+        top: 0px;
         right: 0;
         width: 30%;
         height: auto;
