--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1674,7 +1674,7 @@ $border: 4px solid $primary-dark;
       }
       @media (max-width: 430px) {
         font-size: 16px;
-        height: -webkit-fill-available;
+        height: 96px;
       }
     }
   }
