--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1405,7 +1405,6 @@ $border: 4px solid $primary-dark;
   border-top: $border;
   border-bottom: $border;
   background: white;
-  z-index: 999;
   position: relative;
   height: 24px;
   &.w-100 {
@@ -1606,7 +1605,6 @@ $border: 4px solid $primary-dark;
       line-height: 150%;
       color: $primary-dark;
       letter-spacing: 0.025rem;
-      z-index: 1000;
       @media (max-width: 576px) {
         font-size: 16px;
       }
@@ -1697,7 +1695,6 @@ $border: 4px solid $primary-dark;
     &.two {
       bottom: 9px;
       left: 235px;
-      z-index: 1000;
       width: 30px;
       height: auto;
       animation: shine 1s infinite 0.5s alternate;
@@ -1705,7 +1702,6 @@ $border: 4px solid $primary-dark;
     &.three {
       bottom: 280px;
       left: 28px;
-      z-index: 1000;
       width: 23px;
       height: auto;
       animation: shine 1s infinite 1s alternate;
@@ -1713,15 +1709,11 @@ $border: 4px solid $primary-dark;
     &.border {
       bottom: 23%;
       right: 37%;
-      z-index: 1000;
-      width: 23px;
-      height: auto;
       animation: shine 1s infinite 1s alternate;
     }
     &.orange {
       bottom: 33px;
       right: 158px;
-      z-index: 1000;
       width: 23px;
       height: auto;
       animation: shine 1s infinite alternate;
@@ -1729,9 +1721,6 @@ $border: 4px solid $primary-dark;
     &.brown {
       bottom: 42%;
       right: 20%;
-      z-index: 1000;
-      width: 23px;
-      height: auto;
       animation: shine 1s infinite alternate;
     }
   }
@@ -1747,7 +1736,6 @@ $border: 4px solid $primary-dark;
     position: absolute;
     bottom: 24%;
     left: 8px;
-    z-index: 1000;
     width: 20%;
     height: auto;
     @media (max-width: 991px) {
@@ -1823,6 +1811,19 @@ $border: 4px solid $primary-dark;
 }
 .product {
   position: relative;
+  top: -648px;
+  left: 0;
+  z-index: -1;
+  height: 0;
+  @media (max-width: 1200px) {
+    top: -580px;
+  }
+  @media (max-width: 991px) {
+    top: -572px;
+  }
+  @media (max-width: 576px) {
+    top: -510px;
+  }
   .product-bg {
     width: 100%;
     object-fit: cover;
@@ -1831,8 +1832,8 @@ $border: 4px solid $primary-dark;
     position: absolute;
     top: -5px;
     right: 195px;
-    width: 116px;
-    height: auto;
+    // width: 116px;
+    // height: auto;
     &:nth-child(2) {
       right: 37px;
       @media (max-width: 991px) {
@@ -1859,7 +1860,6 @@ $border: 4px solid $primary-dark;
   .machine {
     position: absolute;
     bottom: -9px;
-    z-index: 1000;
     width: 494px;
     height: auto;
     left: 0;
@@ -2102,7 +2102,6 @@ $border: 4px solid $primary-dark;
     position: absolute;
     width: 7%;
     height: auto;
-    z-index: 1000;
     bottom: 19%;
     left: 23%;
     @media (max-width: 991px) {
@@ -2146,7 +2145,7 @@ $border: 4px solid $primary-dark;
         margin-top: 36px;
       }
       .slide-card {
-        background-image: url("/card.png");
+        background-image: url("https://img.shoplineapp.com/media/image_clips/687fa55b9879b1000e8d7125/original.png?1753195867");
         width: 327px;
         height: 500px;
         background-size: cover;
@@ -2225,7 +2224,7 @@ $border: 4px solid $primary-dark;
   }
 }
 .member {
-  background-image: url("/member-bg.png");
+  background-image: url("https://img.shoplineapp.com/media/image_clips/687fa55d92cf9200185b6f5d/original.png?1753195869");
   width: 100%;
   height: 1036px;
   background-size: cover;
@@ -2254,7 +2253,7 @@ $border: 4px solid $primary-dark;
     transform: translateX(-50%);
     width: 572px;
     height: 138px;
-    background-image: url("/member.png");
+    background-image: url("https://img.shoplineapp.com/media/image_clips/687fa55bc5633900121328e3/original.png?1753195866");
     background-size: contain;
     background-repeat: no-repeat;
     font-size: 44px;
@@ -2265,7 +2264,7 @@ $border: 4px solid $primary-dark;
     align-items: end;
     justify-content: center;
     @media (max-width: 991px) {
-      background-image: url("/member_m.png");
+      background-image: url("https://img.shoplineapp.com/media/image_clips/687fa55b32d89c000cb372cf/original.png?1753195866");
       width: 247px;
       font-size: 24px;
       height: 103px;
@@ -2316,7 +2315,7 @@ $border: 4px solid $primary-dark;
         content: "";
         width: 161px;
         height: 88px;
-        background-image: url("/name-card.png");
+        background-image: url("https://img.shoplineapp.com/media/image_clips/687fa55b8c4d59000cee9043/original.png?1753195866");
         background-size: cover;
       }
     }
@@ -2391,14 +2390,19 @@ $border: 4px solid $primary-dark;
       animation: waterWave 4s infinite linear 3s;
     }
     @keyframes waterWave {
-      from {
+      0% {
         width: 0;
         height: 0;
         opacity: 1;
       }
-      to {
+      99% {
         width: 900px;
         height: 900px;
+        opacity: 0;
+      }
+      100% {
+        width: 0;
+        height: 0;
         opacity: 0;
       }
     }
